--- a/css/mediagalery.css
+++ b/css/mediagalery.css
@@ -1,3 +1,65 @@
 @charset "utf-8";
 /* CSS Document */
 
+#mediaGalery {
+    /*display: none;*/
+    position: absolute;
+    left: 50%;
+    margin-left: -400px;
+    top: 200px;
+    width: 800px;
+    border: 3px solid #87CEFA;
+    background-color: #fff;
+    -moz-border-radius: 15px;
+    -webkit-border-radius: 15px;
+    border-radius: 15px;
+    padding: 5px 10px 10px 10px;
+    z-index: 11;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+}
+.MGHeader {
+    height: 25px;
+}
+#MGClose {
+    float: right;
+    margin-top: 5px;
+    background-image: url(http://studyclub.dentistcalendar.com/view/img/cross.png);
+    width: 15px;
+    height: 15px;
+    cursor: pointer;
+}
+#MGCurrentImage {
+    width: 740px;
+}
+#MGWaiting {
+    width: 740px;
+    text-align: center;
+    display: none;
+}
+.MGBody table tr td {
+    cursor: pointer;
+}
+.MGBody table tr td:first-child {
+    width: 30px;
+    vertical-align: middle;
+}
+.MGBody table tr td:first-child img{
+    margin-left: 5px;
+}
+.MGBody table tr td:first-child:hover {
+    background-color: #87CEFA;
+    opacity: 0.3;
+}
+.MGBody table tr td:last-child {
+    width: 30px;
+    display: inlline-block;
+    vertical-align: middle;
+}
+.MGBody table tr td:last-child img {
+    margin-left: 15px;
+}
+.MGBody table tr td:last-child:hover {
+    background-color: #87CEFA;
+    opacity: 0.3;
+}
