--- a/css/mediagalery.css
+++ b/css/mediagalery.css
@@ -2,7 +2,7 @@
 /* CSS Document */
 
 #mediaGalery {
-    /*display: none;*/
+    display: none;
     position: absolute;
     left: 50%;
     margin-left: -400px;
@@ -14,7 +14,7 @@
     -webkit-border-radius: 15px;
     border-radius: 15px;
     padding: 5px 10px 10px 10px;
-    z-index: 11;
+    z-index: 12;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
 }
@@ -31,11 +31,11 @@
 }
 #MGCurrentImage {
     width: 740px;
+    display: none;
 }
 #MGWaiting {
     width: 740px;
     text-align: center;
-    display: none;
 }
 .MGBody table tr td {
     cursor: pointer;
@@ -62,4 +62,7 @@
 .MGBody table tr td:last-child:hover {
     background-color: #87CEFA;
     opacity: 0.3;
+}
+.MGFooter {
+    display: none;
 }
